# solray

./: CMakeLists.txt  README.md  library.h
cmake/: fetch_raylib.cmake  fetch_sol.cmake
src/: library.cpp  solray.cpp
